feat: add multi-entity relationship support and business logic generation